[gd_scene load_steps=15 format=3 uid="uid://0swq8evanvan"]

[ext_resource type="Texture2D" uid="uid://dfuxpogk8v43e" path="res://business_gobliman.png" id="1_e8yaw"]
[ext_resource type="Script" path="res://business_goblin.gd" id="1_hrd8v"]
[ext_resource type="Texture2D" uid="uid://c4j8l4dcs4tju" path="res://shadow.png" id="2_y0vw3"]
[ext_resource type="Script" path="res://finite_state_machine.gd" id="4_dbcne"]
[ext_resource type="Script" path="res://enemy_wander_state.gd" id="5_wbv3n"]
[ext_resource type="Script" path="res://enemy_chase_state.gd" id="6_3aafu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bvdyw"]
atlas = ExtResource("1_e8yaw")
region = Rect2(0, 0, 18, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3o3v"]
atlas = ExtResource("1_e8yaw")
region = Rect2(18, 0, 18, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u4wh"]
atlas = ExtResource("1_e8yaw")
region = Rect2(36, 0, 18, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx7om"]
atlas = ExtResource("1_e8yaw")
region = Rect2(54, 0, 18, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_qb80a"]
atlas = ExtResource("1_e8yaw")
region = Rect2(72, 0, 18, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uds0"]
atlas = ExtResource("1_e8yaw")
region = Rect2(90, 0, 18, 17)

[sub_resource type="SpriteFrames" id="SpriteFrames_tt0s6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvdyw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvdyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3o3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u4wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx7om")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qb80a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uds0")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5x7f5"]
radius = 68.0074

[node name="BusinessGoblin" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_hrd8v")
acceleration = 100.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_tt0s6")
animation = &"idle"
autoplay = "idle"
offset = Vector2(1, -1)

[node name="ShadowSprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.392157)
show_behind_parent = true
position = Vector2(0, 1)
scale = Vector2(0.8, 1)
texture = ExtResource("2_y0vw3")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-3, 0, 0, -3, 3, 0, 0, 3)

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("4_dbcne")
state = NodePath("EnemyWanderState")

[node name="EnemyWanderState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("5_wbv3n")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="EnemyChaseState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("6_3aafu")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="Detection" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_5x7f5")

[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_detection_body_exited"]
